 
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(zod-engine)

ADD_DEFINITIONS(-c -g `sdl-config --cflags` -D DISABLE_OPENGL -D DISABLE_REGCHECK)

FILE(GLOB MyCSources *.cpp)
#FILE(GLOB MyCSources buildings/*.cpp)

FILE(REMOVE MyCSources win_tray.cpp)
FILE(REMOVE MyCSources tile_info_editor.cpp)
FILE(REMOVE MyCSources map_merger.cpp)
FILE(REMOVE MyCSources map_editor.cpp)

FIND_PACKAGE(SDL)
INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
LINK_LIBRARIES(${SDLMAIN_LIBRARY} ${SDL_LIBRARY})

FIND_PACKAGE(SDL_image)
#INCLUDE_DIRECTORIES(${SDL_image_INCLUDE_DIR})

FIND_PACKAGE(SDL_mixer)
#INCLUDE_DIRECTORIES(${SDL_mixer_INCLUDE_DIR})

FIND_PACKAGE(SDL_ttf)
#INCLUDE_DIRECTORIES(${SDL_TTF_INCLUDE_DIR})




############## BEGIN Find MySQL ##############


IF (MYSQL_INCLUDE_DIR)
  # Already in cache, be silent
  SET(MYSQL_FIND_QUIETLY TRUE)
ENDIF (MYSQL_INCLUDE_DIR)

FIND_PATH(MYSQL_INCLUDE_DIR mysql.h
  /usr/local/include/mysql
  /usr/include/mysql
)

SET(MYSQL_NAMES mysqlclient mysqlclient_r)
FIND_LIBRARY(MYSQL_LIBRARY
  NAMES ${MYSQL_NAMES}
  PATHS /usr/lib /usr/local/lib
  PATH_SUFFIXES mysql
)

IF (MYSQL_INCLUDE_DIR AND MYSQL_LIBRARY)
  SET(MYSQL_FOUND TRUE)
  SET( MYSQL_LIBRARIES ${MYSQL_LIBRARY} )
ELSE (MYSQL_INCLUDE_DIR AND MYSQL_LIBRARY)
  SET(MYSQL_FOUND FALSE)
  SET( MYSQL_LIBRARIES )
ENDIF (MYSQL_INCLUDE_DIR AND MYSQL_LIBRARY)

IF (MYSQL_FOUND)
  IF (NOT MYSQL_FIND_QUIETLY)
    MESSAGE(STATUS "Found MySQL: ${MYSQL_LIBRARY}")
  ENDIF (NOT MYSQL_FIND_QUIETLY)
ELSE (MYSQL_FOUND)
  IF (MYSQL_FIND_REQUIRED)
    MESSAGE(STATUS "Looked for MySQL libraries named ${MYSQL_NAMES}.")
    MESSAGE(FATAL_ERROR "Could NOT find MySQL library")
  ENDIF (MYSQL_FIND_REQUIRED)
ENDIF (MYSQL_FOUND)

MARK_AS_ADVANCED(
  MYSQL_LIBRARY
  MYSQL_INCLUDE_DIR
  )
############## END Find MySQL ##############


ADD_EXECUTABLE(zod main.cpp ${MyCSources})

TARGET_LINK_LIBRARIES(zod ${MYSQL_LIBRARY} ${SDLMAIN_LIBRARY} ${SDLIMAGE_LIBRARY} ${SDLTTF_LIBRARY} ${SDLMIXER_LIBRARY})